--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
-# Site settings
 title: Pollinate
-email: info@codingcoop.org
-description: "Pollinate files with data to create a fertilized seed!"
+description: "Template your base files and generate them from Git(Hub)."
 baseurl: "/"
 url: "http://pollinate.xyz"
 
 author:
-  name: "The Coding Cooperative"
+  name: "EverySquare"
 
 # Build settings
 markdown: redcarpet
